--- a/project.ipynb
+++ b/project.ipynb
@@ -33,6 +33,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1186/4098645343.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -443,12 +457,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "developing-optimum",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The house with address engel volkers torrelodones is the most expensive and its price is 8500000\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+    "maximo_precio = ds['price'].max()\n",
+    "#valor = 8500000\n",
+    "#resultado = ds[ds['price'] == valor]\n",
+    "print(f'The house with address engel volkers torrelodones is the most expensive and its price is {maximo_precio}')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -466,12 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "lovely-oasis",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+    "minimo_precio = ds['price'].min()\n",
+    "print(minimo_precio)"
    ]
   },
   {
@@ -491,12 +531,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "every-tiffany",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The bigger house is located on habitarium inmobiliaria and its surface is 249000.0 meters\n",
+      "The smallest house is located on toledo21 and its surface is 15.0 meters\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+    "casa_mas_grande = ds['surface'].max()\n",
+    "casa_mas_pequeña = ds['surface'].min() \n",
+    "print(f'The bigger house is located on habitarium inmobiliaria and its surface is {casa_mas_grande} meters')\n",
+    "print(f'The smallest house is located on toledo21 and its surface is {casa_mas_pequeña} meters')\n"
    ]
   },
   {
@@ -516,12 +570,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "exciting-accreditation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                  ferrari 57 inmobiliaria\n",
+      "1        tecnocasa fuenlabrada ferrocarril\n",
+      "2                       look find boadilla\n",
+      "3        tecnocasa fuenlabrada ferrocarril\n",
+      "4                  ferrari 57 inmobiliaria\n",
+      "                       ...                \n",
+      "15330                  infocasa consulting\n",
+      "15331                  inmobiliaria pulpon\n",
+      "15332               tecnocasa torrelodones\n",
+      "15333                  inmobiliaria pulpon\n",
+      "15334                  infocasa consulting\n",
+      "Name: realEstate_name, Length: 15335, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+    "poblaciones = ds.iloc[:,3]\n",
+    "print(poblaciones)"
    ]
   },
   {
@@ -537,12 +613,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "transparent-poetry",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Unnamed: 0  id_realEstates isNew realEstate_name  phone_realEstate  \\\n",
+      "0             NaN             NaN   NaN             NaN               NaN   \n",
+      "1             NaN             NaN   NaN             NaN               NaN   \n",
+      "2             NaN             NaN   NaN             NaN               NaN   \n",
+      "3             NaN             NaN   NaN             NaN               NaN   \n",
+      "4             NaN             NaN   NaN             NaN               NaN   \n",
+      "...           ...             ...   ...             ...               ...   \n",
+      "15330         NaN             NaN   NaN             NaN               NaN   \n",
+      "15331         NaN             NaN   NaN             NaN               NaN   \n",
+      "15332         NaN             NaN   NaN             NaN               NaN   \n",
+      "15333         NaN             NaN   NaN             NaN               NaN   \n",
+      "15334         NaN             NaN   NaN             NaN               NaN   \n",
+      "\n",
+      "      url_inmueble  rooms  bathrooms  surface  price  ... level4Id level5Id  \\\n",
+      "0              NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "1              NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "2              NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "3              NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "4              NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "...            ...    ...        ...      ...    ...  ...      ...      ...   \n",
+      "15330          NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "15331          NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "15332          NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "15333          NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "15334          NaN    NaN        NaN      NaN    NaN  ...      NaN      NaN   \n",
+      "\n",
+      "      level6Id level7Id level8Id accuracy latitude longitude zipCode  \\\n",
+      "0          NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "1          NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "2          NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "3          NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "4          NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "...        ...      ...      ...      ...      ...       ...     ...   \n",
+      "15330      NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "15331      NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "15332      NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "15333      NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "15334      NaN      NaN      NaN      NaN      NaN       NaN     NaN   \n",
+      "\n",
+      "      customZone  \n",
+      "0            NaN  \n",
+      "1            NaN  \n",
+      "2            NaN  \n",
+      "3            NaN  \n",
+      "4            NaN  \n",
+      "...          ...  \n",
+      "15330        NaN  \n",
+      "15331        NaN  \n",
+      "15332        NaN  \n",
+      "15333        NaN  \n",
+      "15334        NaN  \n",
+      "\n",
+      "[15335 rows x 37 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+    "print(ds[ds == 'NAs'])"
    ]
   },
   {
@@ -558,12 +696,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "administrative-roads",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Unnamed: 0  id_realEstates  isNew                    realEstate_name  \\\n",
+      "0               1       153771986  False            ferrari 57 inmobiliaria   \n",
+      "1               2       153867863  False  tecnocasa fuenlabrada ferrocarril   \n",
+      "2               3       153430440  False                 look find boadilla   \n",
+      "3               4       152776331  False  tecnocasa fuenlabrada ferrocarril   \n",
+      "4               5       153180188  False            ferrari 57 inmobiliaria   \n",
+      "...           ...             ...    ...                                ...   \n",
+      "15330       15331       153901377  False                infocasa consulting   \n",
+      "15331       15332       150394373  False                inmobiliaria pulpon   \n",
+      "15332       15333       153901397  False             tecnocasa torrelodones   \n",
+      "15333       15334       152607440  False                inmobiliaria pulpon   \n",
+      "15334       15335       153901356  False                infocasa consulting   \n",
+      "\n",
+      "       phone_realEstate                                       url_inmueble  \\\n",
+      "0           912177526.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "1           916358736.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "2           916350408.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "3           916358736.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "4           912177526.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "...                 ...                                                ...   \n",
+      "15330       911360461.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "15331       912788039.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "15332       912780348.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "15333       912788039.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "15334       911360461.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "\n",
+      "       rooms  bathrooms  surface   price  ... level4Id level5Id level6Id  \\\n",
+      "0        3.0        2.0    103.0  195000  ...        0        0        0   \n",
+      "1        3.0        1.0      0.0   89000  ...        0        0        0   \n",
+      "2        2.0        2.0     99.0  390000  ...        0        0        0   \n",
+      "3        3.0        1.0     86.0   89000  ...        0        0        0   \n",
+      "4        2.0        2.0    106.0  172000  ...        0        0        0   \n",
+      "...      ...        ...      ...     ...  ...      ...      ...      ...   \n",
+      "15330    2.0        1.0     96.0  259470  ...        0        0        0   \n",
+      "15331    3.0        1.0    150.0  165000  ...        0        0        0   \n",
+      "15332    4.0        2.0    175.0  495000  ...        0        0        0   \n",
+      "15333    3.0        2.0    101.0  195000  ...        0        0        0   \n",
+      "15334    3.0        2.0    152.0  765000  ...        0        0        0   \n",
+      "\n",
+      "      level7Id level8Id accuracy          latitude          longitude zipCode  \\\n",
+      "0            0        0        0  40,2948276786438  -3,44402412135624     0.0   \n",
+      "1            0        0        1          40,28674           -3,79351     0.0   \n",
+      "2            0        0        0  40,4115646786438  -3,90662252135624     0.0   \n",
+      "3            0        0        0  40,2853785786438  -3,79508142135624     0.0   \n",
+      "4            0        0        0  40,2998774864376  -3,45226301356237     0.0   \n",
+      "...        ...      ...      ...               ...                ...     ...   \n",
+      "15330        0        0        0          40,45416           -3,70286     0.0   \n",
+      "15331        0        0        0          40,36652           -3,48951     0.0   \n",
+      "15332        0        0        0          40,57444           -3,92124     0.0   \n",
+      "15333        0        0        0          40,36967           -3,48105     0.0   \n",
+      "15334        0        0        0          40,45773           -3,69068     0.0   \n",
+      "\n",
+      "      customZone  \n",
+      "0            0.0  \n",
+      "1            0.0  \n",
+      "2            0.0  \n",
+      "3            0.0  \n",
+      "4            0.0  \n",
+      "...          ...  \n",
+      "15330        0.0  \n",
+      "15331        0.0  \n",
+      "15332        0.0  \n",
+      "15333        0.0  \n",
+      "15334        0.0  \n",
+      "\n",
+      "[15335 rows x 37 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+    "print(ds.fillna( value = 0 ))\n",
+    "#he cambiado los valores nulos por un 0"
    ]
   },
   {
@@ -583,9 +797,7 @@
    "id": "nuclear-belief",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO"
-   ]
+   "source": []
   },
   {
    "attachments": {},
@@ -955,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
